tests/ui/handle_instance_without_from.stderr
error: #[handle]: `instance = ...` requires also specifying `from = ServiceType`
 --> tests/ui/handle_instance_without_from.rs:6:1
  |
6 | #[mmg_microbus::handles]
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `mmg_microbus::handles` (in Nightly builds, run with -Z macro-backtrace for more info)
